--- a/src/blueprints/user/templates/registration.html
+++ b/src/blueprints/user/templates/registration.html
@@ -1,3 +1,14 @@
+{% import "bootstrap/wtf.html" as wtf %}
 {% include 'header.html' %}
+<div class="container">
+    <form method="POST" action="{{ url_for('user_view.registration') }}">
+        {{ wtf.quick_form(form, button_map={'submit':'primary'}) }}
+    </form>
 
+    <div class="row">
+        <div class="col-sm-12" style="text-align: left;">
+            <a class="btn btn-link" href="{{ url_for('user_view.login') }}">Wróć</a>
+        </div>
+    </div>
+</div>
 {% include 'footer.html' %}
