--- a/src/templates/navigation.html
+++ b/src/templates/navigation.html
@@ -1,13 +1,14 @@
 <div class="masthead clearfix">
     <div class="inner">
         <h3 class="masthead-brand">Escape room ranking</h3>
-        <nav class="nav nav-masthead">
-            <a class="nav-link active" href="#">Dom</a>
-            <a class="nav-link" href="#">Pokoje</a>
-            <a class="nav-link" href="#">Ranking</a>
+        <nav class="nav nav-masthead" >
+            <a class="nav-link active" id="navBarHomeId" href="{{ url_for('user_view.index') }}">Dom</a>
+            <a class="nav-link" id="navBarRoomsId" href="{{ url_for('room_view.room_list') }}">Pokoje</a>
+            <a class="nav-link" id="navBarRankId" href="{{ url_for('score_view.score_list') }}">Ranking</a>
             {% if is_logged %}
             <a class="nav-link" href="{{ url_for('user_view.logout') }}">Wyloguj</a>
             {% endif %}
         </nav>
     </div>
 </div>
+<div style="height: 120px"></div>
