lista pokooi, lista wynikow

--- a/src/blueprints/room/templates/room_list.html
+++ b/src/blueprints/room/templates/room_list.html
@@ -13,7 +13,7 @@
         <tbody>
         {% for room in rooms %}
         <tr>
-            <th scope="row">{{room.name}}</th>
+            <th scope="row">{{room.room_name}}</th>
             <td>{{room.city}}</td>
             <td>{{room.street}}</td>
             <td>{{room.number}}</td>
