--- a/src/blueprints/score/templates/score_list.html
+++ b/src/blueprints/score/templates/score_list.html
@@ -4,10 +4,10 @@
     <table class="table">
         <thead class="thead-dark">
         <tr>
-            <th scope="col">Nazwa</th>
-            <th scope="col">Miasto</th>
-            <th scope="col">Ulica</th>
-            <th scope="col">Numer</th>
+            <th scope="col">Pokój</th>
+            <th scope="col">Czas ucieczki</th>
+            <th scope="col">Imię</th>
+            <th scope="col">Nazwisko</th>
         </tr>
         </thead>
         <tbody>
