Zmiana nazw akcji

--- a/src/blueprints/user/templates/login.html
+++ b/src/blueprints/user/templates/login.html
@@ -32,7 +32,7 @@
 
     <div class="row">
         <div class="col-sm-12" style="text-align: left;">
-            <a class="btn btn-link" href="{{ url_for('user_view.registration') }}">Wróć</a>
+            <a class="btn btn-link" href="{{ url_for('user_view.registration') }}">Zarejestruj</a>
         </div>
     </div>
 </div>
