--- a/src/blueprints/user/templates/registration.html
+++ b/src/blueprints/user/templates/registration.html
@@ -7,7 +7,7 @@
 
     <div class="row">
         <div class="col-sm-12" style="text-align: left;">
-            <a class="btn btn-link" href="{{ url_for('user_view.login') }}">Wróć</a>
+            <a class="btn btn-link" href="{{ url_for('user_view.login') }}">Wróć do logowania</a>
         </div>
     </div>
 </div>
