--- a/src/blueprints/user/templates/registration.html
+++ b/src/blueprints/user/templates/registration.html
@@ -1,6 +1,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% include 'header.html' %}
 <div class="container">
+    <h3>Rejestracja</h3>
     <form method="POST" action="{{ url_for('user_view.registration') }}">
         {{ wtf.quick_form(form, button_map={'submit':'primary'}) }}
     </form>
