--- a/src/templates/navigation.html
+++ b/src/templates/navigation.html
@@ -6,7 +6,8 @@
             <a class="nav-link" id="navBarRoomsId" href="{{ url_for('room_view.room_list') }}">Pokoje</a>
             <a class="nav-link" id="navBarRankId" href="{{ url_for('score_view.score_list') }}">Ranking</a>
             {% if is_logged %}
-            <a class="nav-link" href="{{ url_for('user_view.logout') }}">Wyloguj</a>
+                <a class="nav-link" id="userId" href=""> {{username}} </a>
+                <a class="nav-link" href="{{ url_for('user_view.logout') }}">Wyloguj</a>
             {% endif %}
         </nav>
     </div>
