--- a/src/static/cover.css
+++ b/src/static/cover.css
@@ -76,7 +76,6 @@ body {
     padding: .25rem 0;
     font-weight: bold;
     color: rgba(255, 255, 255, .5);
-    background-color: transparent;
     border-bottom: .25rem solid transparent;
 }
 
@@ -163,7 +162,7 @@ body {
 /*}*/
 
 .has-error p {
-    color: red;
+    color: #bbebff;
 }
 
 .required input {
