--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,10 +1,10 @@
 {% include 'header.html' %}
 {% include 'navigation.html' %}
 
-<div class="inner cover">
-    <h1 class="cover-heading">Escape room ranking.</h1>
-    <p class="lead">Rozwiązuj zagadki, uciekaj z pokoi, rejestruj swój czas i pnij sie po rankingu najlepszych
-        uciekimierów w histori.</p>
+<div class="container">
+    <h1 class="cover-heading"> Ranking Escape Room </h1>
+    <p class="lead">Rozwiązuj zagadki, uciekaj z pokojów, rejestruj swój czas i pnij się w górę w rankingu najlepszych
+        uciekinierów w historii!</p>
     <p class="lead">
         <a href="{{ url_for('score_view.add_score') }}" class="btn btn-lg btn-secondary">Dodaj swój wynik</a>
     </p>
