Dodanie ikon i przywrócenie opcji po zalogowaniu

--- a/src/static/cover.css
+++ b/src/static/cover.css
@@ -162,9 +162,9 @@ body {
 /*}*/
 
 .has-error p {
-    color: #bbebff;
+    color: lightcoral;
 }
 
 .required input {
-    background-color: lightcoral;
+    background-color: #bbebff;
 }
